# showboat

./: CMakeLists.txt  QtStarterStarter.pro  README.md  Showboat.cpp  Showboat.h  ShowboatGame.cpp  ShowboatMainWindow.ui  main.cpp  showClass.cpp  showClass.h  showData.cpp  showData.h  shows.db  sqlForShows.cpp  sqlForShows.h  sqlHandler.cpp  sqlHandler.h
showdata/: shows.db
